<resources>
    <string name="key_offscreen_limit" translatable="false">offscreen_limit</string>
    <string name="key_default_value" translatable="false">default_value</string>
    <string name="key_enable_beta" translatable="false">enable_beta</string>
    <string name="key_save_path" translatable="false">save_path</string>
    <string name="key_fake_icon" translatable="false">fake_icon</string>
    <string name="key_local_sort" translatable="false">local_sort_type</string>
    <string name="key_title_type" translatable="false">title_type_str</string>
    <string name="key_by_popular" translatable="false">is_by_popular</string>
    <string name="key_column_count" translatable="false">column_count</string>
    <string name="key_only_language" translatable="false">only_language</string>
    <string name="key_default_zoom" translatable="false">default_zoom</string>
    <string name="key_theme_select" translatable="false">theme_select</string>
    <string name="key_max_id" translatable="false">max_id</string>
    <string name="key_cache" translatable="false">cache</string>
    <string name="key_inverted_fix" translatable="false">fix_inverted_image</string>
    <string name="key_ignore_tags" translatable="false">ignore_tags</string>
    <string name="key_use_account_tag" translatable="false">use_account_tags</string>
    <string name="key_send_report" translatable="false">send_report</string>
    <string name="key_use_rtl" translatable="false">use_rtl</string>
    <string name="key_show_titles" translatable="false">show_titles</string>
    <string name="key_column_port_hist" translatable="false">column_port_hist</string>
    <string name="key_column_land_hist" translatable="false">column_land_hist</string>
    <string name="key_column_port_main" translatable="false">column_port_main</string>
    <string name="key_column_land_main" translatable="false">column_land_main</string>
    <string name="key_column_port_down" translatable="false">column_port_down</string>
    <string name="key_column_land_down" translatable="false">column_land_down</string>
    <string name="key_column_port_favo" translatable="false">column_port_favo</string>
    <string name="key_column_land_favo" translatable="false">column_land_favo</string>
    <string name="key_column_port_stat" translatable="false">column_port_stat</string>
    <string name="key_column_land_stat" translatable="false">column_land_stat</string>
    <string name="key_infinite_scroll_main" translatable="false">key_infinite_scroll</string>
    <string name="key_infinite_scroll_favo" translatable="false">infinite_scroll_favo</string>
    <string name="key_hide_multitasking" translatable="false">hide_multitasking</string>
    <string name="key_site_mirror" translatable="false">site_mirror</string>
    <string name="key_language" translatable="false">key_language</string>
    <string name="key_disable_lock" translatable="false">disable_lock</string>
    <string name="key_max_history_size" translatable="false">max_history_size</string>
    <string name="key_zoom_one_column" translatable="false">zoom_one_column</string>
    <string name="empty_circle" translatable="false">○</string>
    <string name="full_circle" translatable="false">◉</string>
    <string name="key_mobile_usage" translatable="false">mobile_usage</string>
    <string name="key_wifi_usage" translatable="false">wifi_usage</string>
    <string name="key_maximum_notification" translatable="false">maximum_notification</string>
    <string name="key_keep_history" translatable="false">keep_history</string>
    <string name="app_version_format" formatted="true" translatable="false">NClientV2 %s</string>
    <string name="key_override_volume" translatable="false">volume_override</string>
    <string name="key_remove_ignored" translatable="false">remove_ignored</string>
    <string name="key_check_update" translatable="false">check_update</string>
    <string name="key_update" translatable="false">update</string>
    <string name="hashtag" translatable="false">#</string>
    <string name="page_format" formatted="true" translatable="false">%d/%d</string>
    <string name="percentage_format" formatted="true" translatable="false">%d%%</string>
    <string name="page_switcher_placeholder" translatable="false">0/0</string>
    <string name="page_placeholder" translatable="false">999/999</string>
    <string name="key_favorite_limit" translatable="false">favorite_limit</string>
    <string name="key_change_page_buttons" translatable="false">change_page_buttons</string>
    <string name="dash" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    <string name="setting_on_ignore_tags">Other tags won\'t be queried when a tag is selected from the gallery menu (except language)</string>
    <string name="setting_off_ignore_tags">Other tags will be queried when a tag is selected from the gallery menu</string>
    <string name="setting_on_use_account_tag">Use the account tags into the search query (Local tags will have priority)</string>
    <string name="setting_off_use_account_tag">Account tags will be ignored for the query</string>
    <string name="theme_summary">Select theme colors</string>
    <string name="send_crash_report">Send crash report</string>
    <string name="change_theme">Change theme</string>
    <string name="clear_cache">Clear cache</string>
    <string name="infinite_scroll">Infinite scroll</string>
    <string name="ignore_tags">Ignore other tags</string>
    <string name="use_account_tag">Use tags from account</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_zoom">Zoom Activity</string>
    <string name="title_activity_tag_filter">Tag Filter</string>
    <string name="title_activity_login">Log in</string>
    <string name="parodies">Parodies</string>
    <string name="characters">Characters</string>
    <string name="tags">Tags</string>
    <string name="artists">Artists</string>
    <string name="groups">Groups</string>
    <string name="languages">Languages</string>
    <string name="categories">Categories</string>
    <string name="unknown">Unknown</string>
    <string name="channel1_name">Download Gallery</string>
    <string name="channel2_name">Create PDF</string>
    <string name="channel3_name">Create ZIP</string>
    <string name="channel1_description">Used to show progress of the download of a gallery</string>
    <string name="channel2_description">Used to show progress of the creation of the PDF</string>
    <string name="channel3_description">Used to show progress of the creation of the ZIP</string>
    <string name="channel2_title">Creating PDF:</string>
    <string name="channel3_title">Creating ZIP:</string>
    <string name="tags_max_reached" formatted="true">You can have a maximum of %d selected tags.</string>
    <string name="only_english">Only english</string>
    <string name="only_japanese">Only japanese</string>
    <string name="only_chinese">Only chinese</string>
    <string name="all_languages">All languages</string>
    <string name="login">Log in</string>
    <string name="login_formatted" formatted="true">Logged as %s</string>
    <string name="logout">Logout</string>
    <string name="favorite_online_manga">Favorite online galleries</string>
    <string name="online_tags">Online tags</string>
    <string name="add_to_online_favorite">Add to online favorites</string>
    <string name="remove_from_online_favorites">Remove from online favorites</string>
    <string name="add_to_online_blacklist">Add to online blacklist?</string>
    <string name="tag_already_in_blacklist">Tag already in blacklist</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="settings">Settings</string>
    <string name="related">Related</string>
    <string name="failed">Failed</string>
    <string name="search">Search</string>
    <string name="prev">Previous</string>
    <string name="share">Share</string>
    <string name="image">Image</string>
    <string name="next">Next</string>
    <string name="create_pdf">Create PDF</string>
    <string name="create_pdf_format" formatted="true">Create PDF of: "%s"</string>
    <string name="create_zip_format" formatted="true">Create ZIP of: "%s"</string>
    <string name="created_pdf">Successful created PDF</string>
    <string name="error_pdf">Error while creating PDF</string>
    <string name="parsing_pages">Parsing pages</string>
    <string name="writing_pdf">Writing PDF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">NHentai unofficial client</string>
    <string name="change_page">Change page:</string>
    <string name="prev_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="downloaded_manga">Downloaded galleries</string>
    <string name="download_gallery">Download gallery</string>
    <string name="delete_gallery_size_format" formatted="true">Delete gallery (%.2fMB)</string>
    <string name="delete_gallery_format" formatted="true">Do you want to delete the gallery:\n%s</string>
    <string name="share_with">Share with</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="go_online">Go online</string>
    <string name="update_tag_status">Update tag status</string>
    <string name="change_view">Change view</string>
    <string name="tag_preference">Tag preference</string>
    <string name="manage_tags">Manage tags</string>
    <string name="applied_filters">Applied filters</string>
    <string name="show_related">Show related galleries</string>
    <string name="random_manga">Random gallery</string>
    <string name="save_page">Save page</string>
    <string name="page_count_format" formatted="true">%d pages</string>
    <string name="upload_date_format" formatted="true">Uploaded on %s at %s</string>
    <string name="favorite_count_format" formatted="true">%d favorites</string>
    <string name="favorite_manga">Favorite galleries</string>
    <string name="setting_on_remove_ignored">The galleries with ignored tags will not be shown</string>
    <string name="setting_off_remove_ignored">The galleries with ignored tags will be blurred</string>
    <string name="remove_ignored_galleries">Remove ignored galleries</string>
    <string name="use_column_port">Column count while in portrait</string>
    <string name="use_column_land">Column count while in landscape</string>
    <string name="start_all_downloads">Start all downloads</string>
    <string name="pause_all_downloads">Pause all downloads</string>
    <string name="cancel_all_downloads">Cancel all downloads</string>
    <string name="favorite_column_count">Select favorite column count</string>
    <string name="download_column_count">Select download column count</string>
    <string name="history_column_count">Select history column count</string>
    <string name="main_column_count">Select main column count</string>
    <string name="create_zip">Create ZIP</string>
    <string name="rotate_image">Rotate image</string>
    <string name="mobile_data_usage_setting">Mobile data usage settings</string>
    <string name="wifi_data_usage_setting">Wi-Fi data usage settings</string>
    <string name="bookmark_here">Bookmark here</string>
    <string name="title">Title</string>
    <string name="download_date">Download date</string>
    <string name="page_count">Page count</string>
    <string name="size">Size</string>
    <string name="descending_order">Descending order</string>
    <string name="delete">Delete</string>
    <string name="pause_selected_downloads">Pause selected downloads</string>
    <string name="start_selected_downloads">Start selected downloads</string>
</resources>