<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/main_column_count">
        <SeekBarPreference
            android:title="@string/use_column_port"
            android:key="@string/key_column_port_main"
            android:defaultValue="2"
            android:max="4"/>
        <SeekBarPreference
            android:title="@string/use_column_land"
            android:key="@string/key_column_land_main"
            android:defaultValue="4"
            android:max="4"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/download_column_count">
        <SeekBarPreference
            android:title="@string/use_column_port"
            android:key="@string/key_column_port_down"
            android:defaultValue="2"
            android:max="4"/>
        <SeekBarPreference
            android:title="@string/use_column_land"
            android:key="@string/key_column_land_down"
            android:defaultValue="4"
            android:max="4"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/favorite_column_count">
        <SeekBarPreference
            android:title="@string/use_column_port"
            android:key="@string/key_column_port_favo"
            android:defaultValue="2"
            android:max="4"/>
        <SeekBarPreference
            android:title="@string/use_column_land"
            android:key="@string/key_column_land_favo"
            android:defaultValue="4"
            android:max="4"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/history_column_count">
        <SeekBarPreference
            android:title="@string/use_column_port"
            android:key="@string/key_column_port_hist"
            android:defaultValue="2"
            android:max="4"/>
        <SeekBarPreference
            android:title="@string/use_column_land"
            android:key="@string/key_column_land_hist"
            android:defaultValue="4"
            android:max="4"/>
    </PreferenceCategory>

</PreferenceScreen>
