<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/sort_by_name"
        app:showAsAction="ifRoom|collapseActionView"
        />
    <item
        android:id="@+id/random_favorite"
        android:icon="@drawable/ic_shuffle"
        android:title="@string/random_manga"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/pauseAll"
        android:orderInCategory="100"
        android:icon="@drawable/ic_pause"
        android:title="@string/pause_all_downloads"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/startAll"
        android:orderInCategory="200"
        android:icon="@drawable/ic_play"
        android:title="@string/start_all_downloads"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/cancelAll"
        android:orderInCategory="300"
        android:icon="@drawable/ic_close"
        android:title="@string/cancel_all_downloads"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>
