<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:background="?android:attr/colorBackground"
    android:alpha="0.75"
    android:id="@+id/master_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="9"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true">

    <ImageButton
        android:id="@+id/prev"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:tint="?android:attr/colorForeground"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/prev_page" />
    <EditText
        android:hint="@string/hashtag"
        android:inputType="none"
        android:focusable="false"
        android:id="@+id/page_index"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:text="@string/page_switcher_placeholder"
        android:layout_height="wrap_content"
        tools:ignore="Autofill" />
    <ImageButton
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:tint="?android:attr/colorForeground"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_arrow_forward"
        android:contentDescription="@string/next_page" />
</LinearLayout>
</androidx.cardview.widget.CardView>