<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <ImageButton
            android:contentDescription="@string/prev"
            android:id="@+id/prev"
            android:layout_width="0dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/ic_keyboard_arrow_left"
            app:backgroundTint="@android:color/transparent"
            android:tint="?android:attr/colorForeground"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/hashtag"
            android:inputType="number"
            android:id="@+id/edit_page"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/page"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <ImageButton
            android:contentDescription="@string/next"
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_weight="2"
            app:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/ic_keyboard_arrow_right"
            android:tint="?android:attr/colorForeground"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>